<resources>
    <string name="app_name">EchoTwin</string>
    <string name="action_settings">Settings</string>
    <string name="record_fragment">Record Fragment</string>
    <string name="tts_fragment">TTS Fragment</string>
    <string name="record_button_description">Record image button to start recording</string>
    <string name="stop_button_description">Stop image button to stop recording the voice</string>
    <string name="play_button_description">Play button content description</string>
    <string name="upload_text">Upload</string>
    <string name="username">Username</string>
    <string name="user_avatar_content_description">User avatar for voice recording</string>
    <string name="title_activity_tts">Text To Speech</string>
    <string name="title_activity_record">Record your voice</string>
    <string name="select_voice">Select voice</string>
    <string name="text_to_read_label">Type the text to read</string>
    <string name="read_text">Read Text</string>
    <string name="timer_default">00:00</string>
    <string name="text_to_read_when_recording">Please read this text while recording: lasdsdfs skjdfhdskjfhds skdfjhsdkjfhdskf sdfjhsdkfjhsdk sdkfjhsdkjfhsdkj ksdjhfskdjhfkdsjhf skdjfhskdjfhdksjfh skjdfhdskjfhskdjfh skdjfhdskjfhksdh skdjfhsdkjfhdsk</string>
    <string name="play_sample_voice_description">Play Sample Voice Image Button</string>
</resources>
