<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.echotwin.android.RecordActivity"
    tools:showIn="@layout/activity_record">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/user_avatar_content_description"
        android:src="@drawable/user_avatar_placeholder"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/userNameTextInput"
        android:layout_width="230dp"
        android:layout_height="66dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorText"
        app:layout_constraintBottom_toBottomOf="@+id/userAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userAvatar"
        app:layout_constraintTop_toTopOf="@+id/userAvatar">

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:theme="@style/MyEditText" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/chronometerTimer"
        style="@style/normalText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/timer_default"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/recordStopImageButton"
        app:layout_constraintEnd_toStartOf="@+id/recordStopImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recordStopImageButton" />

    <ImageButton
        android:id="@+id/recordStopImageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/record_button_description"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_btn_speak_now"
        android:tint="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userAvatar" />

    <ImageButton
        android:id="@+id/playImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/play_button_description"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_play"
        android:tint="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/recordStopImageButton"
        app:layout_constraintStart_toEndOf="@+id/recordStopImageButton"
        app:layout_constraintTop_toTopOf="@+id/recordStopImageButton" />

    <Button
        android:id="@+id/uploadVoiceAndInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/upload_text"
        android:theme="@style/MyButton"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textToReadTextView"
        android:layout_width="342dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_to_read_when_recording"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/uploadVoiceAndInfoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordStopImageButton" />

</android.support.constraint.ConstraintLayout>
