<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.echotwin.android.TTSActivity"
    tools:showIn="@layout/activity_tts">

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/voices_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:dropDownHeight="200dp"
        android:gravity="center"
        android:hint="@string/select_voice"
        android:isScrollContainer="true"
        android:textColorHint="#CFD8DC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:met_floatingLabel="normal" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="500"
        app:counterOverflowTextAppearance="@style/CounterOverFlow"
        app:counterTextAppearance="@style/CounterText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/HintText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voices_spinner">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_to_read_label"
            android:inputType="textMultiLine"
            android:maxLength="500"
            android:maxLines="12"
            android:minLines="1"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/send_data"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/read_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_area" />

</android.support.constraint.ConstraintLayout>
